--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 always-auth = true
-@porsche-ui:registry = https://porscheui.jfrog.io/porscheui/api/npm/npm/
 @porsche-design-system:registry = https://porscheui.jfrog.io/porscheui/api/npm/npm/
+@porschehn:registry=https://porscheui.jfrog.io/porscheui/api/npm/npm/
