Revert "ci: check if gh-pages work without --base-href | bh"
This reverts commit 8dce65727dfd5c0636580a67b8801e6331cd3c5e.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --prod --base-href /sample-integration-angular/",
     "test": "ng test",
     "test:ci": "CHROME_BIN=chromium ng test --browsers=ChromeHeadlessCI --watch=false",
     "lint": "ng lint",
