--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:ci": "CHROME_BIN=chromium ng test --browsers=ChromeHeadlessCI --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "serve": "ng build --prod && serve -s dist/sample-integration-angular"
+    "serve": "ng build --prod && serve -s dist/sample-integration-angular",
+    "prettier": "prettier --write 'src/**/*.{ts,tsx}'"
   },
   "private": true,
   "dependencies": {
@@ -43,6 +44,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "prettier": "^2.0.5",
     "protractor": "~5.4.3",
     "serve": "^11.3.1",
     "ts-node": "~8.3.0",
