--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
-    "@porsche-design-system/components-angular": "^1.4.0",
+    "@porsche-design-system/components-angular": "^1.5.0-rc.0",
     "@porschehn/navigation": "^1.2.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
