update(sample-angular): upgrade porsche-design-system to 1.5.1 / implement postinstall ngcc | mh

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "serve": "ng build --prod && serve -s dist/sample-integration-angular",
-    "prettier": "prettier --write 'src/**/*.{ts,tsx}'"
+    "prettier": "prettier --write 'src/**/*.{ts,tsx}'",
+    "ngcc": "ngcc",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
