--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
-    "@porsche-design-system/components-angular": "^1.5.0-rc.2",
+    "@porsche-design-system/components-angular": "^1.5.2",
     "@porschehn/navigation": "^1.3.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
