Implement utilities page | mh / bh

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,12 @@
           }
         }
       }
-    }},
-  "defaultProject": "sample-integration-angular"
+    }
+  },
+  "defaultProject": "sample-integration-angular",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
