--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@porsche-design-system/components-angular": "^1.5.2",
+    "@porsche-design-system/utilities": "1.0.5-rc.1",
     "@porschehn/navigation": "^1.3.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
