--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.7"
+  },
+  "resolutions": {
+    "@porsche-design-system/components-js": "1.5.2"
   }
 }
