ci: try wildcard for dependabot branches | bh

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,7 +5,7 @@ on:
       - feature/*
       - housekeeping/*
       - issue/*
-      - dependabot/*
+      - dependabot/**
 name: "Sample Integration Angular"
 jobs:
   build:
