--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@porsche-design-system/browser-notification-banner": "^1.0.0-alpha.6",
     "@porsche-design-system/components-angular": "^1.5.2",
     "@porsche-design-system/utilities": "1.0.6",
     "@porschehn/navigation": "^1.3.1",
