--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
-    "@porsche-design-system/components-angular": "^1.5.2",
+    "@porsche-design-system/components-angular": "1.5.4-rc.0",
     "@porsche-design-system/utilities": "1.0.6",
     "@porschehn/navigation": "^1.3.1",
     "rxjs": "~6.6.0",
