--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
-    "@porsche-design-system/components-angular": "1.5.6",
+    "@porsche-design-system/components-angular": "2.0.0-alpha.6",
     "@porsche-design-system/utilities": "2.0.0",
     "@porschehn/navigation": "^1.3.1",
     "rxjs": "~6.6.0",
@@ -53,8 +53,5 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.7"
-  },
-  "resolutions": {
-    "@porsche-design-system/components-js": "1.5.6"
   }
 }
