--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "e2e": "ng e2e",
     "serve": "ng build --prod && serve -s dist/sample-integration-angular",
     "prettier": "prettier --write 'src/**/*.{ts,tsx}'",
-    "ngcc": "ngcc",
-    "postinstall": "ngcc"
+    "ngcc": "ngcc"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +23,7 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
-    "@porsche-design-system/components-angular": "2.0.0-alpha.6",
+    "@porsche-design-system/components-angular": "2.0.0-alpha.7",
     "@porsche-design-system/utilities": "2.0.0",
     "@porschehn/navigation": "^1.3.1",
     "rxjs": "~6.6.0",
@@ -47,7 +46,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "prettier": "^2.0.5",
+    "prettier": "^2.2.1",
     "protractor": "~7.0.0",
     "serve": "^11.3.1",
     "ts-node": "~8.3.0",
