--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "prestart": "yarn replace",
     "start": "ng serve --host 0.0.0.0 --port 4200",
+    "prebuild": "yarn replace",
     "build": "ng build --prod --base-href /sample-integration-angular/",
+    "replace": "yarn replace:core_styles && yarn replace:font_face_css",
+    "replace:core_styles": "partial=$(node -e 'console.log(require(\"@porsche-design-system/partials\").getPorscheDesignSystemCoreStyles())') && regex='<!--PLACEHOLDER_CORE_STYLES-->|<style>(p-[a-z-]*,?)*\\{visibility:hidden\\}<\\/style>' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:rename_index_html",
+    "replace:font_face_css": "partial=$(node -e 'console.log(require(\"@porsche-design-system/partials\").getFontFaceCSS())') && regex='<!--PLACEHOLDER_FONT_FACE_CSS-->|<link rel=\"?stylesheet\"? href=\"?https:\\/\\/cdn\\.ui\\.porsche\\.(com|cn)\\/porsche-design-system\\/styles\\/font-face\\.min\\..*\\.css\"?>' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:rename_index_html",
+    "replace:rename_index_html": "rm src/index.html && mv src/index.tmp.html src/index.html",
     "test": "ng test",
     "test:ci": "CHROME_BIN=chromium ng test --browsers=ChromeHeadlessCI --watch=false",
     "lint": "ng lint",
@@ -16,17 +22,17 @@
   "private": true,
   "prettier": "@porsche-design-system/prettier-config",
   "dependencies": {
-    "@angular/animations": "~11.0.2",
-    "@angular/common": "~11.0.2",
-    "@angular/compiler": "~11.0.2",
-    "@angular/core": "~11.0.2",
-    "@angular/forms": "~11.0.2",
-    "@angular/platform-browser": "~11.0.2",
-    "@angular/platform-browser-dynamic": "~11.0.2",
-    "@angular/router": "~11.0.2",
-    "@porsche-design-system/components-angular": "2.0.0-alpha.6",
-    "@porsche-design-system/prettier-config": "^1.0.0",
-    "@porsche-design-system/utilities": "2.0.0",
+    "@angular/animations": "11.0.7",
+    "@angular/common": "11.0.7",
+    "@angular/compiler": "11.0.7",
+    "@angular/core": "11.0.7",
+    "@angular/forms": "11.0.7",
+    "@angular/platform-browser": "11.0.7",
+    "@angular/platform-browser-dynamic": "11.0.7",
+    "@angular/router": "11.0.7",
+    "@porsche-design-system/components-angular": "2.0.0-alpha.10",
+    "@porsche-design-system/partials": "^2.2.0",
+    "@porsche-design-system/utilities": "4.0.0",
     "@porschehn/navigation": "^1.12.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.3",
@@ -34,9 +40,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
-    "@angular/compiler-cli": "~11.0.2",
-    "@angular/language-service": "~11.0.2",
+    "@angular/cli": "11.0.6",
+    "@angular/compiler-cli": "11.0.7",
+    "@angular/language-service": "11.0.7",
+    "@porsche-design-system/prettier-config": "^1.0.0",
     "@types/jasmine": "~3.6.2",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.14.9",
@@ -51,7 +58,7 @@
     "prettier": "^2.2.1",
     "protractor": "~7.0.0",
     "serve": "^11.3.1",
-    "ts-node": "~9.0.0",
+    "ts-node": "~9.1.1",
     "tslint": "~6.1.3",
     "typescript": "~4.0.5"
   }
