feat: implement browser notification overlay | mh / bh | #514

--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "ng serve --host 0.0.0.0 --port 4200",
     "prebuild": "yarn replace",
     "build": "ng build --prod --base-href /sample-integration-angular/",
-    "replace": "yarn replace:core_styles && yarn replace:font_face_css",
-    "replace:core_styles": "partial=$(node -e 'console.log(require(\"@porsche-design-system/partials\").getPorscheDesignSystemCoreStyles())') && regex='<!--PLACEHOLDER_CORE_STYLES-->|<style>(p-[a-z-]*,?)*\\{visibility:hidden\\}<\\/style>' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:rename_index_html",
-    "replace:font_face_css": "partial=$(node -e 'console.log(require(\"@porsche-design-system/partials\").getFontFaceCSS())') && regex='<!--PLACEHOLDER_FONT_FACE_CSS-->|<link rel=\"?stylesheet\"? href=\"?https:\\/\\/cdn\\.ui\\.porsche\\.(com|cn)\\/porsche-design-system\\/styles\\/font-face\\.min\\..*\\.css\"?>' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:rename_index_html",
-    "replace:rename_index_html": "rm src/index.html && mv src/index.tmp.html src/index.html",
+    "replace": "yarn replace:coreStyles && yarn replace:fontFaceCss && yarn replace:browserNotification",
+    "replace:coreStyles": "partial=$(node -e 'console.log(require(\"@porsche-design-system/partials\").getPorscheDesignSystemCoreStyles())') && regex='<!--PLACEHOLDER_CORE_STYLES-->|<style>(p-[a-z-]*,?)*\\{visibility:hidden\\}<\\/style>' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:renameIndexHtml",
+    "replace:fontFaceCss": "partial=$(node -e 'console.log(require(\"@porsche-design-system/partials\").getFontFaceCSS())') && regex='<!--PLACEHOLDER_FONT_FACE_CSS-->|<link rel=\"?stylesheet\"? href=\"?https:\\/\\/cdn\\.ui\\.porsche\\.(com|cn)\\/porsche-design-system\\/styles\\/font-face\\.min\\..*\\.css\"?>' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:renameIndexHtml",
+    "replace:browserNotification": "partial=$(node -e 'console.log(require(\"@porsche-design-system/browser-notification\").includeOverlay().replace(/(\\\\[bd\\/]|&)/g, \"\\\\$1\"))') && regex='<!--PLACEHOLDER_NOTIFICATION-->|<script>.*browser-notification.*<\\/script>' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:renameIndexHtml",
+    "replace:renameIndexHtml": "rm src/index.html && mv src/index.tmp.html src/index.html",
     "test": "ng test",
     "test:ci": "CHROME_BIN=chromium ng test --browsers=ChromeHeadlessCI --watch=false",
     "lint": "ng lint",
@@ -30,6 +31,7 @@
     "@angular/platform-browser": "11.0.7",
     "@angular/platform-browser-dynamic": "11.0.7",
     "@angular/router": "11.0.7",
+    "@porsche-design-system/browser-notification": "^2.0.0",
     "@porsche-design-system/components-angular": "2.0.0-alpha.10",
     "@porsche-design-system/partials": "^2.2.0",
     "@porsche-design-system/utilities": "4.0.0",
