--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "ng serve --host 0.0.0.0 --port 4200",
     "prebuild": "yarn replace",
     "build": "ng build --prod --base-href /sample-integration-angular/",
-    "replace": "yarn replace:coreStyles && yarn replace:fontFaceCss && yarn replace:browserNotification",
-    "replace:coreStyles": "partial=$(node -e 'console.log(require(\"@porsche-design-system/components-angular/partials\").getInitialStyles())') && regex='<!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_INITIAL_STYLES-->|<style>(p-[a-z-]*,?)*{visibility:hidden}<\\/style>' && sed -i '' -E -e \"s@$regex@$partial@\" src/index.html",
-    "replace:fontFaceCss": "partial=$(node -e 'console.log(require(\"@porsche-design-system/components-angular/partials\").getFontFaceStylesheet())') && regex='<!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_FONT_FACE_STYLESHEET-->|<link rel=\"?stylesheet\"? href=\"?https:\\/\\/cdn\\.ui\\.porsche\\.(com|cn)\\/porsche-design-system\\/styles\\/font-face\\.min\\..*\\.css\"?>' && sed -i '' -E -e \"s@$regex@$partial@\" src/index.html",
+    "replace": "yarn replace:coreStyles && yarn replace:fontFaceCss && yarn replace:browserNotification && yarn replace:fontPreloading",
+    "replace:coreStyles": "placeholder='<!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_INITIAL_STYLES-->' && partial=$placeholder$(node -e 'console.log(require(\"@porsche-design-system/components-js/partials\").getInitialStyles())') && regex=$placeholder'.*' && sed -i '' -E -e \"s@$regex@$partial@\" src/index.html",
+    "replace:fontFaceCss": "placeholder='<!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_FONT_FACE_STYLESHEET-->' && partial=$placeholder$(node -e 'console.log(require(\"@porsche-design-system/components-js/partials\").getFontFaceStylesheet())') && regex=$placeholder'.*' && sed -i '' -E -e \"s@$regex@$partial@\" src/index.html",
+    "replace:fontPreloading": "placeholder='<!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_FONT_LATIN-->' && partial=$placeholder$(node -e 'console.log(require(\"@porsche-design-system/components-js/partials\").getFontLinks({ weight: [\"regular\", \"semi-bold\"] }))') && regex=$placeholder'.*' && sed -i '' -E -e \"s@$regex@$partial@\" src/index.html",
     "replace:browserNotification": "partial=$(node -e 'console.log(require(\"@porsche-design-system/browser-notification\").includeOverlay().replace(/(\\\\[bd\\/]|&)/g, \"\\\\$1\"))') && regex='<!--PLACEHOLDER_NOTIFICATION-->|<script>.*browser-notification.*<\\/script>' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:renameIndexHtml",
     "replace:renameIndexHtml": "rm src/index.html && mv src/index.tmp.html src/index.html",
     "test": "ng test",
@@ -32,7 +33,7 @@
     "@angular/platform-browser-dynamic": "11.0.7",
     "@angular/router": "11.0.7",
     "@porsche-design-system/browser-notification": "^2.0.0",
-    "@porsche-design-system/components-angular": "2.0.0-alpha.12",
+    "@porsche-design-system/components-angular": "2.0.0-alpha.13",
     "@porsche-design-system/utilities": "4.0.0",
     "@porschehn/navigation": "^1.12.0",
     "rxjs": "~6.6.3",
