--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
   "private": true,
   "prettier": "@porsche-design-system/prettier-config",
   "dependencies": {
-    "@angular/animations": "11.0.7",
-    "@angular/common": "11.0.7",
-    "@angular/compiler": "11.0.7",
-    "@angular/core": "11.0.7",
-    "@angular/forms": "11.0.7",
-    "@angular/platform-browser": "11.0.7",
-    "@angular/platform-browser-dynamic": "11.0.7",
-    "@angular/router": "11.0.7",
+    "@angular/animations": "11.2.5",
+    "@angular/common": "11.2.5",
+    "@angular/compiler": "11.2.5",
+    "@angular/core": "11.2.5",
+    "@angular/forms": "11.2.5",
+    "@angular/platform-browser": "11.2.5",
+    "@angular/platform-browser-dynamic": "11.2.5",
+    "@angular/router": "11.2.5",
     "@porsche-design-system/browser-notification": "^2.0.0",
-    "@porsche-design-system/components-angular": "2.0.0-alpha.13",
+    "@porsche-design-system/components-angular": "2.0.0-rc.7",
     "@porsche-design-system/utilities": "4.0.0",
     "@porschehn/navigation": "^1.12.0",
     "rxjs": "~6.6.3",
@@ -43,8 +43,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.2",
     "@angular/cli": "11.0.6",
-    "@angular/compiler-cli": "11.0.7",
-    "@angular/language-service": "11.0.7",
+    "@angular/compiler-cli": "11.2.5",
+    "@angular/language-service": "11.2.5",
     "@porsche-design-system/prettier-config": "^1.0.0",
     "@types/jasmine": "~3.6.2",
     "@types/jasminewd2": "~2.0.3",
