--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@angular/platform-browser-dynamic": "11.2.12",
     "@angular/router": "11.2.12",
     "@porsche-design-system/browser-notification": "^2.0.0",
-    "@porsche-design-system/components-angular": "2.0.3",
+    "@porsche-design-system/components-angular": "2.1.0-beta.0",
     "@porsche-design-system/utilities": "4.0.0",
     "@porschehn/navigation": "^2.1.0",
     "rxjs": "~6.6.7",
