chore: upgrade dep. / latest PDS version | mh

--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "@angular/platform-browser-dynamic": "11.2.12",
     "@angular/router": "11.2.12",
     "@porsche-design-system/browser-notification": "^2.0.0",
-    "@porsche-design-system/components-angular": "2.1.0-beta.0",
+    "@porsche-design-system/components-angular": "2.1.0",
     "@porsche-design-system/utilities": "4.0.0",
     "@porschehn/navigation": "^2.1.0",
-    "rxjs": "~6.6.7",
+    "rxjs": "~7.0.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.3"
   },
@@ -49,7 +49,7 @@
     "@types/jasmine": "~3.6.10",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^15.0.1",
-    "codelyzer": "^6.0.1",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.2",
