feat: update rxjs, pds, karma, karma-jasmine-html-reporter, prettier and types | as

--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "@angular/platform-browser-dynamic": "11.2.12",
     "@angular/router": "11.2.12",
     "@porsche-design-system/browser-notification": "^2.0.0",
-    "@porsche-design-system/components-angular": "2.2.0-beta.1",
+    "@porsche-design-system/components-angular": "2.2.1",
     "@porsche-design-system/utilities": "4.0.0",
     "@porschehn/navigation": "^2.1.0",
-    "rxjs": "~7.0.0",
+    "rxjs": "~7.1.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.3"
   },
@@ -49,18 +49,18 @@
     "@angular/compiler-cli": "11.2.12",
     "@angular/language-service": "11.2.12",
     "@porsche-design-system/prettier-config": "^1.0.0",
-    "@types/jasmine": "~3.6.10",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^15.0.1",
+    "@types/jasmine": "~3.7.7",
+    "@types/jasminewd2": "~2.0.9",
+    "@types/node": "^15.12.2",
     "codelyzer": "^6.0.2",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.2",
+    "karma": "~6.3.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "prettier": "^2.2.1",
+    "karma-jasmine-html-reporter": "^1.6.0",
+    "prettier": "^2.3.1",
     "protractor": "~7.0.0",
     "serve": "^11.3.1",
     "ts-node": "~9.1.1",
