--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@porsche-design-system/components-angular": "2.2.1",
     "@porsche-design-system/utilities": "4.0.0",
     "@porschehn/navigation": "^2.1.0",
-    "rxjs": "~7.1.0",
+    "rxjs": "^6.5.3",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.3"
   },
