--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@angular/platform-browser-dynamic": "12.0.5",
     "@angular/router": "12.0.5",
     "@porsche-design-system/browser-notification": "^2.0.0",
-    "@porsche-design-system/components-angular": "2.2.1",
+    "@porsche-design-system/components-angular": "2.3.0-beta.1",
     "@porsche-design-system/utilities": "4.0.0",
     "@porschehn/navigation": "^2.1.0",
     "rxjs": "^7.1.0",
