--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@angular/platform-browser-dynamic": "12.2.13",
     "@angular/router": "12.2.13",
     "@porsche-design-system/browser-notification": "^3.0.0",
-    "@porsche-design-system/components-angular": "2.6.1",
+    "@porsche-design-system/components-angular": "2.7.0-beta.2",
     "@porsche-design-system/utilities": "5.1.0",
     "@porschehn/navigation": "^2.10.4",
     "rxjs": "^7.4.0",
