fix(docker): add curl dependency in docker image | as

--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -3,7 +3,7 @@ FROM node:14.16.1-stretch-slim
 ENV PATH="/opt/sample-integration/bin:${PATH}"
 
 RUN apt-get update && \
-    apt-get install -yq openssh-client git && \
+    apt-get install -yq openssh-client git curl && \
     apt-get install -y --no-install-recommends chromium
 
 COPY ./entrypoint.sh "/opt/sample-integration/entrypoint.sh"
