--- a/package.json
+++ b/package.json
@@ -27,27 +27,28 @@
   "private": true,
   "prettier": "@porsche-design-system/prettier-config",
   "dependencies": {
-    "@angular/animations": "12.2.13",
-    "@angular/common": "12.2.13",
-    "@angular/compiler": "12.2.13",
-    "@angular/core": "12.2.13",
-    "@angular/forms": "12.2.13",
-    "@angular/platform-browser": "12.2.13",
-    "@angular/platform-browser-dynamic": "12.2.13",
-    "@angular/router": "12.2.13",
+    "@angular/animations": "12.2.14",
+    "@angular/common": "12.2.14",
+    "@angular/compiler": "12.2.14",
+    "@angular/core": "12.2.14",
+    "@angular/forms": "12.2.14",
+    "@angular/platform-browser": "12.2.14",
+    "@angular/platform-browser-dynamic": "12.2.14",
+    "@angular/router": "12.2.14",
     "@porsche-design-system/browser-notification": "^3.0.0",
     "@porsche-design-system/components-angular": "2.7.0-beta.2",
     "@porsche-design-system/utilities": "5.1.0",
     "@porschehn/navigation": "^2.10.4",
+    "node-sass": "yarn:sass",
     "rxjs": "^7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.13",
-    "@angular/cli": "12.2.13",
-    "@angular/compiler-cli": "12.2.13",
-    "@angular/language-service": "12.2.13",
+    "@angular-devkit/build-angular": "~12.2.14",
+    "@angular/cli": "12.2.14",
+    "@angular/compiler-cli": "12.2.14",
+    "@angular/language-service": "12.2.14",
     "@porsche-design-system/prettier-config": "^1.0.0",
     "@types/jasmine": "~3.10.2",
     "@types/jasminewd2": "~2.0.10",
