--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "prestart": "yarn replace",
     "start": "ng serve --host 0.0.0.0 --port 4200",
     "prebuild": "yarn replace",
-    "build": "ng build --prod --base-href /sample-integration-angular/",
+    "build": "ng build --configuration production --base-href /sample-integration-angular/",
     "replace": "yarn replace:intitialStyles && yarn replace:componentChunkLinks && yarn replace:iconLinks && yarn replace:metaTagsAndIconLinks && yarn replace:fontFaceStylesheet && yarn replace:fontPreloading && yarn replace:browserNotification",
     "replace:intitialStyles": "placeholder='<!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_INITIAL_STYLES-->' && partial=$placeholder$(node -e 'console.log(require(\"@porsche-design-system/components-angular/partials\").getInitialStyles())') && regex=$placeholder'.*' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:renameIndexHtml",
     "replace:componentChunkLinks": "placeholder='<!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_COMPONENT_CHUNKS-->' && partial=$placeholder$(node -e 'console.log(require(\"@porsche-design-system/components-angular/partials\").getComponentChunkLinks({ components: [\"button\", \"checkbox-wrapper\", \"divider\", \"grid\", \"headline\", \"link\", \"link-pure\", \"modal\", \"pagination\", \"radio-button-wrapper\", \"select-wrapper\", \"spinner\", \"tabs-bar\", \"text\", \"textarea-wrapper\", \"text-field-wrapper\"] }))') && regex=$placeholder'.*' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:renameIndexHtml",
@@ -21,8 +21,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "serve": "ng build --prod && serve -s dist/sample-integration-angular",
-    "prettier": "prettier --write 'src/**/*.{ts,tsx}'",
-    "ngcc": "ngcc"
+    "prettier": "prettier --write 'src/**/*.{ts,tsx}'"
   },
   "private": true,
   "prettier": "@porsche-design-system/prettier-config",
@@ -36,7 +35,7 @@
     "@angular/platform-browser-dynamic": "12.2.13",
     "@angular/router": "12.2.13",
     "@porsche-design-system/browser-notification": "^4.0.0",
-    "@porsche-design-system/components-angular": "2.7.0-rc.0",
+    "@porsche-design-system/components-angular": "2.8.0-beta.1",
     "@porsche-design-system/utilities": "5.2.0",
     "@porschehn/navigation": "^2.10.9",
     "rxjs": "^7.4.0",
