--- a/angular.json
+++ b/angular.json
@@ -11,10 +11,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
             "outputPath": "dist/sample-integration-angular",
             "index": "src/index.html",
+            "indexTransform": "./scripts/transformIndexHtml.ts",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
