--- a/package.json
+++ b/package.json
@@ -3,24 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "prestart": "yarn replace",
     "start": "ng serve --host 0.0.0.0 --port 4200",
-    "prebuild": "yarn replace",
     "build": "ng build --configuration production --base-href /sample-integration-angular/",
-    "replace": "yarn replace:intitialStyles && yarn replace:componentChunkLinks && yarn replace:iconLinks && yarn replace:metaTagsAndIconLinks && yarn replace:fontFaceStylesheet && yarn replace:fontPreloading && yarn replace:browserNotification",
-    "replace:intitialStyles": "placeholder='<!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_INITIAL_STYLES-->' && partial=$placeholder$(node -e 'console.log(require(\"@porsche-design-system/components-angular/partials\").getInitialStyles())') && regex=$placeholder'.*' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:renameIndexHtml",
-    "replace:componentChunkLinks": "placeholder='<!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_COMPONENT_CHUNKS-->' && partial=$placeholder$(node -e 'console.log(require(\"@porsche-design-system/components-angular/partials\").getComponentChunkLinks({ components: [\"button\", \"checkbox-wrapper\", \"divider\", \"grid\", \"headline\", \"link\", \"link-pure\", \"modal\", \"pagination\", \"radio-button-wrapper\", \"select-wrapper\", \"spinner\", \"tabs-bar\", \"text\", \"textarea-wrapper\", \"text-field-wrapper\"] }))') && regex=$placeholder'.*' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:renameIndexHtml",
-    "replace:fontFaceStylesheet": "placeholder='<!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_FONT_FACE_STYLESHEET-->' && partial=$placeholder$(node -e 'console.log(require(\"@porsche-design-system/components-angular/partials\").getFontFaceStylesheet())') && regex=$placeholder'.*' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:renameIndexHtml",
-    "replace:fontPreloading": "placeholder='<!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_FONT_LATIN-->' && partial=$placeholder$(node -e 'console.log(require(\"@porsche-design-system/components-angular/partials\").getFontLinks({ weights: [\"regular\", \"semi-bold\"] }))') && regex=$placeholder'.*' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:renameIndexHtml",
-    "replace:browserNotification": "partial=$(node -e 'console.log(require(\"@porsche-design-system/browser-notification\").includeOverlay().replace(/(\\\\[bd\\/]|&)/g, \"\\\\$1\"))') && regex='<!--PLACEHOLDER_NOTIFICATION-->|<script>.*browser-notification.*<\\/script>' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:renameIndexHtml",
-    "replace:renameIndexHtml": "rm src/index.html && mv src/index.tmp.html src/index.html",
-    "replace:iconLinks": "placeholder='<!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_ICONS-->' && partial=$placeholder$(node -e 'console.log(require(\"@porsche-design-system/components-angular/partials\").getIconLinks({ icons: [\"arrowHeadRight\", \"search\", \"compare\", \"configurate\"] }))') && regex=$placeholder'.*' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:renameIndexHtml",
-    "replace:metaTagsAndIconLinks": "placeholder='<!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_META_TAGS_AND_ICON_LINKS-->' && partial=$placeholder$(node -e 'console.log(require(\"@porsche-design-system/components-angular/partials\").getMetaTagsAndIconLinks({ appTitle: \"Sample Integration Angular\" }))') && regex=$placeholder'.*' && sed -E -e \"s@$regex@$partial@\" src/index.html > src/index.tmp.html && yarn replace:renameIndexHtml",
     "test": "ng test",
     "test:ci": "CHROME_BIN=chromium ng test --browsers=ChromeHeadlessCI --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "serve": "ng build --prod && serve -s dist/sample-integration-angular",
+    "serve": "ng build --configuration production && serve -s dist/sample-integration-angular",
     "prettier": "prettier --write 'src/**/*.{ts,tsx}'"
   },
   "private": true,
@@ -34,7 +23,7 @@
     "@angular/platform-browser": "12.2.13",
     "@angular/platform-browser-dynamic": "12.2.13",
     "@angular/router": "12.2.13",
-    "@porsche-design-system/browser-notification": "^4.0.0",
+    "@porsche-design-system/browser-notification": "^4.1.1",
     "@porsche-design-system/components-angular": "2.8.0",
     "@porsche-design-system/utilities": "5.2.0",
     "@porschehn/navigation": "^2.10.9",
@@ -43,6 +32,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^12.1.3",
     "@angular-devkit/build-angular": "~12.2.13",
     "@angular/cli": "12.2.13",
     "@angular/compiler-cli": "12.2.13",
