--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@porsche-design-system/browser-notification": "^4.1.1",
     "@porsche-design-system/components-angular": "2.9.2",
     "@porsche-design-system/utilities": "5.2.0",
-    "@porschehn/navigation": "^2.10.9",
+    "@porschehn/navigation": "~2.10.9",
     "rxjs": "^7.5.5",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.5"
