--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@angular/platform-browser-dynamic": "12.2.16",
     "@angular/router": "12.2.16",
     "@porsche-design-system/browser-notification": "^4.1.2",
-    "@porsche-design-system/components-angular": "2.12.1",
-    "@porsche-design-system/utilities": "5.3.0",
+    "@porsche-design-system/components-angular": "2.13.0-rc.3",
+    "@porsche-design-system/utilities": "5.3.1",
     "@porschehn/navigation": "^2.16.0",
     "rxjs": "^7.5.5",
     "tslib": "^2.4.0",
@@ -55,5 +55,9 @@
     "ts-node": "~10.8.1",
     "tslint": "~6.1.3",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@porsche-design-system/components-js": "2.13.0-rc.3",
+    "@porsche-design-system/utilities": "5.3.1"
   }
 }
