--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/router": "12.2.16",
     "@porsche-design-system/components-angular": "2.15.0-rc.1",
     "@porsche-design-system/utilities": "5.3.1",
-    "@porschehn/navigation": "^2.16.0",
+    "@porschehn/navigation": "2.16.0",
     "rxjs": "^7.5.6",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
@@ -56,7 +56,7 @@
     "typescript": "~4.3.5"
   },
   "resolutions": {
-    "@porsche-design-system/components-js": "2.15.0-rc.0",
+    "@porsche-design-system/components-js": "2.15.0-rc.1",
     "@porsche-design-system/utilities": "5.3.1"
   }
 }
