--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "12.2.16",
     "@angular/platform-browser-dynamic": "12.2.16",
     "@angular/router": "12.2.16",
-    "@porsche-design-system/components-angular": "2.16.2-rc.0",
+    "@porsche-design-system/components-angular": "2.16.2",
     "@porsche-design-system/utilities": "5.3.1",
     "@porschehn/navigation": "2.16.0",
     "rxjs": "^7.5.6",
@@ -37,11 +37,11 @@
     "@angular/compiler-cli": "12.2.16",
     "@angular/language-service": "12.2.16",
     "@porsche-design-system/prettier-config": "^1.0.0",
-    "@types/jasmine": "~4.0.3",
+    "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^17.0.43",
+    "@types/node": "^18.8.2",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~4.3.0",
+    "jasmine-core": "~4.4.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.1",
@@ -56,7 +56,7 @@
     "typescript": "~4.3.5"
   },
   "resolutions": {
-    "@porsche-design-system/components-js": "2.16.2-rc.0",
+    "@porsche-design-system/components-js": "2.16.2",
     "@porsche-design-system/utilities": "5.3.1"
   }
 }
