feat: upgrade angular to v14, recreate yarn.lock | bh / sas | #1927

--- a/angular.json
+++ b/angular.json
@@ -104,10 +104,12 @@
       }
     }
   },
-  "defaultProject": "sample-integration-angular",
   "schematics": {
     "@schematics/angular:component": {
       "style": "scss"
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
