--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sample-integration-angular",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "rm -rf ./node_modules/@angular-builders/custom-webpack/node_modules",
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 4200",
     "build": "ng build --configuration production --base-href /sample-integration-angular/",
@@ -15,14 +16,14 @@
   "private": true,
   "prettier": "@porsche-design-system/prettier-config",
   "dependencies": {
-    "@angular/animations": "14.2.8",
-    "@angular/common": "14.2.8",
-    "@angular/compiler": "14.2.8",
-    "@angular/core": "14.2.8",
-    "@angular/forms": "14.2.8",
-    "@angular/platform-browser": "14.2.8",
-    "@angular/platform-browser-dynamic": "14.2.8",
-    "@angular/router": "14.2.8",
+    "@angular/animations": "15.0.1",
+    "@angular/common": "15.0.1",
+    "@angular/compiler": "15.0.1",
+    "@angular/core": "15.0.1",
+    "@angular/forms": "15.0.1",
+    "@angular/platform-browser": "15.0.1",
+    "@angular/platform-browser-dynamic": "15.0.1",
+    "@angular/router": "15.0.1",
     "@porsche-design-system/components-angular": "2.18.0-rc.0",
     "@porsche-design-system/utilities": "5.3.1",
     "@porschehn/navigation": "2.22.0",
@@ -31,11 +32,11 @@
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^14.0.1",
-    "@angular-devkit/build-angular": "^14.2.7",
-    "@angular/cli": "14.2.7",
-    "@angular/compiler-cli": "14.2.8",
-    "@angular/language-service": "14.2.8",
+    "@angular-builders/custom-webpack": "^14.1.0",
+    "@angular-devkit/build-angular": "^15.0.0",
+    "@angular/cli": "15.0.0",
+    "@angular/compiler-cli": "15.0.1",
+    "@angular/language-service": "15.0.1",
     "@porsche-design-system/prettier-config": "^1.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "~2.0.10",
@@ -53,6 +54,6 @@
     "serve": "^14.0.1",
     "ts-node": "~10.9.1",
     "tslint": "~6.1.3",
-    "typescript": "~4.6.4"
+    "typescript": "~4.8.4"
   }
 }
