--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@angular/platform-browser": "15.0.1",
     "@angular/platform-browser-dynamic": "15.0.1",
     "@angular/router": "15.0.1",
-    "@porsche-design-system/components-angular": "2.18.0-rc.2",
-    "@porsche-design-system/utilities": "5.4.0-rc.0",
-    "@porschehn/navigation": "2.22.0",
+    "@porsche-design-system/components-angular": "2.19.0-rc.2",
+    "@porsche-design-system/utilities": "5.4.0",
+    "@porschehn/navigation": "2.23.2",
     "rxjs": "^7.5.6",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
