--- a/package.json
+++ b/package.json
@@ -16,26 +16,27 @@
   "private": true,
   "prettier": "@porsche-design-system/prettier-config",
   "dependencies": {
-    "@angular/animations": "16.1.5",
-    "@angular/common": "16.1.5",
-    "@angular/compiler": "16.1.5",
-    "@angular/core": "16.1.5",
-    "@angular/forms": "16.1.5",
-    "@angular/platform-browser": "16.1.5",
-    "@angular/platform-browser-dynamic": "16.1.5",
-    "@angular/router": "16.1.5",
+    "@angular/animations": "16.1.6",
+    "@angular/common": "16.1.6",
+    "@angular/compiler": "16.1.6",
+    "@angular/core": "16.1.6",
+    "@angular/forms": "16.1.6",
+    "@angular/platform-browser": "16.1.6",
+    "@angular/platform-browser-dynamic": "16.1.6",
+    "@angular/router": "16.1.6",
     "@porsche-design-system/components-angular": "3.5.0-rc.0",
     "@porsche-design-system/utilities": "5.4.1",
+    "@porschehn/navigation": "3.1.4",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.0",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^16.0.0",
-    "@angular-devkit/build-angular": "^16.1.4",
-    "@angular/cli": "16.1.4",
-    "@angular/compiler-cli": "16.1.5",
-    "@angular/language-service": "16.1.5",
+    "@angular-devkit/build-angular": "^16.1.5",
+    "@angular/cli": "16.1.5",
+    "@angular/compiler-cli": "16.1.6",
+    "@angular/language-service": "16.1.6",
     "@porsche-design-system/prettier-config": "^1.0.0",
     "@types/jasmine": "~4.3.5",
     "@types/jasminewd2": "~2.0.10",
