--- a/package.json
+++ b/package.json
@@ -16,39 +16,40 @@
   "private": true,
   "prettier": "@porsche-design-system/prettier-config",
   "dependencies": {
-    "@angular/animations": "16.2.1",
-    "@angular/common": "16.2.1",
-    "@angular/compiler": "16.2.1",
-    "@angular/core": "16.2.1",
-    "@angular/forms": "16.2.1",
-    "@angular/platform-browser": "16.2.1",
-    "@angular/platform-browser-dynamic": "16.2.1",
-    "@angular/router": "16.2.1",
+    "@angular/animations": "16.2.3",
+    "@angular/common": "16.2.3",
+    "@angular/compiler": "16.2.3",
+    "@angular/core": "16.2.3",
+    "@angular/forms": "16.2.3",
+    "@angular/platform-browser": "16.2.3",
+    "@angular/platform-browser-dynamic": "16.2.3",
+    "@angular/router": "16.2.3",
     "@porsche-design-system/components-angular": "3.7.0-rc.0",
     "@porsche-design-system/utilities": "5.4.1",
+    "@porschehn/navigation": "3.2.3",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^16.0.1",
-    "@angular-devkit/build-angular": "^16.2.0",
-    "@angular/cli": "16.2.0",
-    "@angular/compiler-cli": "16.2.1",
-    "@angular/language-service": "16.2.1",
+    "@angular-devkit/build-angular": "^16.2.1",
+    "@angular/cli": "16.2.1",
+    "@angular/compiler-cli": "16.2.3",
+    "@angular/language-service": "16.2.3",
     "@porsche-design-system/prettier-config": "^1.0.0",
     "@types/jasmine": "~4.3.5",
     "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^20.5.4",
+    "@types/node": "^20.5.9",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~5.1.0",
+    "jasmine-core": "~5.1.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "prettier": "^3.0.2",
+    "prettier": "^3.0.3",
     "protractor": "~7.0.0",
     "serve": "^14.2.1",
     "ts-node": "~10.9.1",
