--- a/package.json
+++ b/package.json
@@ -56,5 +56,9 @@
     "ts-node": "~10.9.1",
     "tslint": "~6.1.3",
     "typescript": "~5.1.6"
+  },
+  "volta": {
+    "node": "18.18.1",
+    "yarn": "1.22.19"
   }
 }
