feat: upgrade all dependencies, recreate yarn.lock | bh

--- a/package.json
+++ b/package.json
@@ -24,23 +24,23 @@
     "@angular/platform-browser": "17.0.2",
     "@angular/platform-browser-dynamic": "17.0.2",
     "@angular/router": "17.0.2",
-    "@porsche-design-system/components-angular": "3.8.0-rc.0",
+    "@porsche-design-system/components-angular": "3.8.0",
     "@porsche-design-system/utilities": "5.4.1",
-    "@porschehn/navigation": "3.2.6",
+    "@porschehn/navigation": "3.3.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
-    "zone.js": "~0.14.0"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^16.0.1",
+    "@angular-builders/custom-webpack": "^17.0.0",
     "@angular-devkit/build-angular": "^17.0.0",
     "@angular/cli": "17.0.0",
     "@angular/compiler-cli": "17.0.2",
     "@angular/language-service": "17.0.2",
     "@porsche-design-system/prettier-config": "^1.0.0",
-    "@types/jasmine": "~4.3.6",
-    "@types/jasminewd2": "~2.0.11",
-    "@types/node": "^20.6.3",
+    "@types/jasmine": "~5.1.2",
+    "@types/jasminewd2": "~2.0.13",
+    "@types/node": "^20.9.0",
     "codelyzer": "^6.0.2",
     "glob": "^10.3.10",
     "jasmine-core": "~5.1.1",
@@ -50,7 +50,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "protractor": "~7.0.0",
     "serve": "^14.2.1",
     "ts-node": "~10.9.1",
