--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser": "17.1.1",
     "@angular/platform-browser-dynamic": "17.1.1",
     "@angular/router": "17.1.1",
-    "@porsche-design-system/components-angular": "3.15.0-rc.5",
+    "@porsche-design-system/components-angular": "3.15.1",
     "@porsche-design-system/utilities": "5.4.1",
     "@porschehn/navigation": "3.3.7",
     "rxjs": "^7.8.1",
